sort of fixed the positioning of the cards and fixed the positioning of yt video on mobile phones

--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,29 @@
     }
 }
 
+@media (max-width: 768px) {
+    .modal-dialog.modal-lg {
+        max-width: 480px;
+        margin: auto;
+    }
+    
+    .video-wrapper {
+        padding-bottom: 56.25%;
+    }
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+
+
 body {
     font-family: "Cormorant Garamond", serif;
     font-weight: 400;
     font-style: normal;
     color: #3c3c3c
 }
-
 
 .hero-section {
     position: relative;
@@ -454,8 +470,32 @@ td {
     margin-top: 10px;
 } */
 
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 footer {
     background-color: rgba(155, 155, 155, 0.7);
     color: white;
     padding: 30px 0;
 }
+
+.video-wrapper {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 ratio */
+    height: 0;
+    margin-bottom: 1rem;
+  }
+  
+  .video-wrapper iframe,
+  .video-wrapper #player {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
